@@ -20,6 +20,7 @@
 			<label index="privacy">Privacy</label>
 			<label index="editGroup">Edit group</label>
 			<label index="newGroup">New group</label>
+			<label index="listGroups">Group list</label>
 		</languageKey>
 	</data>
 </T3locallang>
