@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for the privacy application</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="listgroups_"></label>
+		</languageKey>
+	</data>
+</T3locallang>
