@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Template for the privacy application</title>
+</head>
+<body>
+
+<!-- ###LIST_GROUPS### begin -->
+<div>
+	<div id="tx-community-grouplist">
+		<!-- ###LOOP:GROUPS### begin -->
+		<!-- ###LOOP_CONTENT### -->
+		<div id="groupTeaser###GROUP_UID###">
+			<p><a href="###GROUP_URL###">###GROUP_TITLE###</a></p>
+			<p>###GROUP_DESCRIPTION###</p>
+		</div>
+		<!-- ###LOOP_CONTENT### -->
+		<!-- ###LOOP:GROUPS### end -->
+	</div>
+</div>
+<!-- ###LIST_GROUPS### end -->
+
+</body>
+</html>
